--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
     <!---Footer-->
     <section class="bg-green-100 p-10 flex flex-col gap-5 mt-4">
         <h1 class="text-4xl font-bold">Greenden</h1>
-        <p>Standard chunk of Lorem ipsum dolor sit, amet consectetur</p>
-        <p>@ 2021 Greenday.com </p>
+        <p>Standard chunks of Lorem ipsum dolor sit, amet consectetur</p>
+        <p>@ 2024 Greenday.com </p>
     </section>
 
     <script src="index.js"></script>
